# SJTU_FreshCup

./: CMakeCache.txt  Makefile  README.md  race_launch.ign  race_world.sdf
Gazebo_Race/: CMakeLists.txt  README.md  cmake_install.cmake  race_node  race_node.cc  race_world.sdf
Gazebo_Race/esp32/: Gazebo.cpp  Gazebo.h  esp32.ino
Gazebo_Race/road/: package.xml  road.SLDASM  road.SLDPRT  road.f3d  swxJRNL.swj
Gazebo_Race/road/launch/: display.launch
Gazebo_Race/road/meshes/: base_link.STL
Gazebo_Race/road/urdf/: road.csv  road.sdf  road.urdf
